[workspace]

[workspace.dependencies]
jni = "0.22.4"

[package]
name = "automerge_jni"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automerge = "0.8.0"
jni = { workspace = true }
thiserror = "1.0.37"
tracing = "0.1.41"
tracing-core = "0.1"
tracing-subscriber = "0.3.20"

# Repo integration (samod-core and friends). These can be gated behind a
# feature flag later if we want to ship the core JNI bindings without the
# repo layer, but for now the repo module compiles unconditionally.
samod-core = "0.9.0"
url = "2"
rand = "0.9"

[lib]
crate_type = ["cdylib"]
