[workspace]

[workspace.dependencies]
jni = "0.22.4"

[package]
name = "automerge_jni"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automerge = "0.8.0"
jni = { workspace = true }
thiserror = "1.0.37"
tracing = "0.1.41"
tracing-core = "0.1"
tracing-subscriber = "0.3.20"

[lib]
crate_type = ["cdylib"]
